horizontal scroll issue fixed, updated project pics

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,7 @@
     }
     .margin-bottom0{
         margin-bottom: 0;
+        text-align: left;
     }
     .Projects {
     align-items: center;
@@ -216,7 +217,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 100px;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     }
     .Projects .wrappercards .card {
     color: white;
@@ -469,7 +470,7 @@
         justify-content: center;
         display: inline-block;
         margin-top: 200px;
-        margin-left: 30px;
+        /* margin-left: 30px; */
         height: 500px;
     }
     hr{
@@ -486,18 +487,9 @@
         margin-bottom: 40px;
     }
     .about .about-icons {
-        padding: 2%;
-        font-size: 20px;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 100px;
+        font-size: 40px;
     }
-    .about .about-icons i {
-        padding: 2%;
-        color: white;
-        /* margin-bottom: 2%; */
-    }
+
     
     .Projects {
         /* margin-top: 2%; */
@@ -505,7 +497,7 @@
         text-align: center;
         color: white;
         justify-content: center;
-        margin-left: 16px;
+        /* margin-left: 16px; */
     }
     .Projects h2 {
         /* margin-bottom: 2%; */
@@ -517,7 +509,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding: 5%;
-        margin-left: 5%;
+        /* margin-left: 5%; */
         margin-right:5%;
         width: 100%;
         margin: 5%;
